# FightingVision2020

./: .gitignore  CMakeLists.txt  FightingVision2020.cpp  FightingVision2020.h  README.md
Armor/: ArmorDetector.cpp  ArmorDetector.h  ArmorParam.cpp  ArmorParam.h
Camera/: 640x480标定数据.txt  CameraParam.yml  ChArUcoCalibration.h  CircleQueue.h  CircularQueue.h  DahuaCamera.yml  FightingCameraCapture.cpp  FightingCameraCapture.h  FightingCameraParam.cpp  FightingCameraParam.h  FightingCapture.h  FightingDahuaCapture.cpp  FightingDahuaCapture.h  FightingMVCapture.cpp  FightingMVCapture.h  FightingSimpleCapture.cpp  FightingSimpleCapture.h  FightingUSBCapture.cpp  FightingUSBCapture.h  FightingVideoCapture.cpp  FightingVideoCapture.h  ImageConvert.h  ImageConvert.lib  MVCAMSDK_X64.lib  MVSDKmd.lib
Camera/Include/: CameraApi.h  CameraApiLoad.h  CameraDefine.H  CameraDefine.h  camera_api.h  camera_define.h
Camera/Include/GenICam/: AcquisitionControl.h  AnalogControl.h  Camera.h  ErrorCode.h  EventSubscribe.h  Frame.h  ISPControl.h  ParameterNode.h  StreamSource.h  System.h  TransportLayerControl.h  UserSetControl.h
Camera/Include/GenICam/CAPI/: SDK.h
Camera/Include/GenICam/GigE/: GigECamera.h
Camera/Include/GenICam/Usb/: UsbCamera.h  UsbInterface.h
Camera/Include/Infra/: FunctionTemplate.h  PrintLog.h  SignalTemplate.h
Camera/Include/Infra/Types/: Types.h
Camera/Include/Memory/: Block.h
Config/: ArmorParam.cpp  ArmorParam.h  ArmorParam.yml  CameraParam.cpp  CameraParam.h  CameraParam.yml  CameraParamMindVision.yml  CameraParamVideo.yml  FightingParam.h  MV-SUA134GC-Group0.config  MV-SUA134GC-Group0_640.config  RuneParam.cpp  RuneParam.h  RuneParam.yml  SerialParam.cpp  SerialParam.h  SerialParam.yml
Rune/: RuneDetector.cpp  RuneDetector.h  RuneParam.cpp  RuneParam.h  RuneParam.yml
SerialPort/: Protocol.cpp  Protocol.h  SerialDevice.cpp  SerialDevice.h  SerialPort.cpp  SerialPort.h  protocol.h
Tools/: Clocks.sh  Deploy.sh  FightingVision2020.bat  FightingVision2020.service  FightingVision2020.sh  Linux版开机自启说明.txt  Undeploy.sh  Undeployment.sh  rc.local  watchdog.bat
